--- a/frontend/src/ui/styles/components/players_table.scss
+++ b/frontend/src/ui/styles/components/players_table.scss
@@ -28,6 +28,8 @@ players-table {
 
   img {
     max-width: $pictureWidth;
+    max-height: $pictureWidth;
+    border-radius: 10px;
   }
 
   .players-table-legend {
