simpler and more flexible game events

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -166,8 +166,8 @@ game-events-table route-link.game-event-card {
   margin-bottom: 10px;
   align-items: center;
   display: grid;
-  grid-template-areas: "ref name total-games";
-  grid-template-columns: 30px 250px 65px;
+  grid-template-areas: "ref name type total-games";
+  grid-template-columns: 30px 170px 75px 65px 90px 90px;
   grid-column-gap: 10px;
 }
 game-events-table route-link.game-event-card:hover {
@@ -189,8 +189,8 @@ game-events-table .game-events-table-legend {
   align-items: center;
   font-weight: bold;
   display: grid;
-  grid-template-areas: "ref name total-games";
-  grid-template-columns: 30px 250px 65px;
+  grid-template-areas: "ref name type total-games";
+  grid-template-columns: 30px 170px 75px 65px 90px 90px;
   grid-column-gap: 10px;
 }
 
