pagination to the game events table

--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -85,12 +85,12 @@ game-records-table .align-left {
   justify-content: left;
   text-align: left;
 }
-game-records-table div#game-records-table-pagination {
+game-records-table .pagination {
   display: flex;
   justify-content: center;
   margin-top: 30px;
 }
-game-records-table div#game-records-table-pagination button {
+game-records-table .pagination button {
   background: whitesmoke;
   border: 3px solid #eee;
   border-radius: 5px;
@@ -102,7 +102,7 @@ game-records-table div#game-records-table-pagination button {
   padding-right: 12px;
   cursor: pointer;
 }
-game-records-table div#game-records-table-pagination button:hover {
+game-records-table .pagination button:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
@@ -177,6 +177,27 @@ game-events-table .align-left {
   display: flex;
   justify-content: left;
   text-align: left;
+}
+game-events-table .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+game-events-table .pagination button {
+  background: whitesmoke;
+  border: 3px solid #eee;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
+  transition: all 0.15s ease-in-out;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+  padding: 12px 8px;
+  padding-right: 12px;
+  cursor: pointer;
+}
+game-events-table .pagination button:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+  transform: translate3d(0px, -0.5px, 0px);
 }
 game-events-table route-link.game-event-card {
   margin-bottom: 35px;
