--- a/frontend/src/ui/styles/components/game_events_table.scss
+++ b/frontend/src/ui/styles/components/game_events_table.scss
@@ -3,6 +3,7 @@
 game-events-table {
   @include grt.captionDecoration;
   @include grt.spanAlignment;
+  @include grt.pagination;
 
   @mixin cardLegendGrid {
     $gameEventNameWidth: 170px;
