--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -106,18 +106,13 @@ game-records-table .pagination button:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-game-records-table .loader-container {
-  display: flex;
+game-records-table .loader {
   justify-content: center;
-  width: 100%;
-  margin: 20px 0;
-}
-game-records-table .loader-container .loader {
-  border: 10px solid #f3f3f3;
-  border-top: 10px solid green;
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   animation: spin 2s linear infinite;
 }
 @keyframes spin {
