--- a/frontend/local/index.css
+++ b/frontend/local/index.css
@@ -66,15 +66,6 @@ footer foot-er svg {
   fill: #717171;
 }
 
-game-records-table h2 {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 15px;
-  font-size: 1.8rem;
-}
-game-records-table h2 route-link {
-  color: #005c00;
-}
 game-records-table span:not(.align-left) {
   display: flex;
   justify-content: center;
@@ -84,6 +75,15 @@ game-records-table .align-left {
   display: flex;
   justify-content: left;
   text-align: left;
+}
+game-records-table h2 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+}
+game-records-table h2 route-link {
+  color: #005c00;
 }
 game-records-table .pagination {
   display: flex;
@@ -140,22 +140,15 @@ game-records-table route-link.card {
   padding-right: 12px;
   margin-bottom: 10px;
   align-items: center;
-  display: grid;
-  grid-template-columns: 30px 70px 85px 60px 40px 60px 40px 70px 85px 60px 60px 40px 90px 110px 100px;
-  grid-template-areas: "ref" "black-pic black country-flags handicapWidth elo-black elo-delta-black" "white-pic white country-flags elo-white elo-delta-white" "result date event";
-  grid-column-gap: 10px;
 }
 game-records-table route-link.card:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-game-records-table route-link.card route-link {
-  color: #000066;
-}
-game-records-table route-link.card route-link[winner] {
+game-records-table route-link.card span[winner] {
   color: #005200;
 }
-game-records-table route-link.card route-link[loser] {
+game-records-table route-link.card span[loser] {
   color: #660000;
 }
 game-records-table route-link.card img {
@@ -163,21 +156,24 @@ game-records-table route-link.card img {
   max-height: 70px;
   border-radius: 10px;
 }
-game-records-table route-link.card[player-wins] {
-  background-color: #e6ffe6;
+game-records-table #legend {
+  padding: 12px 8px;
+  padding-right: 12px;
+  align-items: center;
+  font-weight: bold;
 }
-game-records-table route-link.card[player-loses] {
-  background-color: #ffe6e6;
-}
+game-records-table route-link.card,
 game-records-table #legend {
   display: grid;
   grid-template-columns: 30px 70px 85px 60px 40px 60px 40px 70px 85px 60px 60px 40px 90px 110px 100px;
   grid-template-areas: "ref" "black-pic black country-flags handicapWidth elo-black elo-delta-black" "white-pic white country-flags elo-white elo-delta-white" "result date event";
   grid-column-gap: 10px;
-  padding: 12px 8px;
-  padding-right: 12px;
-  align-items: center;
-  font-weight: bold;
+}
+game-records-table route-link.card[player-wins] {
+  background-color: #e6ffe6;
+}
+game-records-table route-link.card[player-loses] {
+  background-color: #ffe6e6;
 }
 
 game-events-table h2 {
@@ -241,13 +237,10 @@ game-events-table route-link.game-event-card:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-game-events-table route-link.game-event-card route-link {
-  color: #000066;
-}
-game-events-table route-link.game-event-card route-link[winner] {
+game-events-table route-link.game-event-card span[winner] {
   color: #005200;
 }
-game-events-table route-link.game-event-card route-link[loser] {
+game-events-table route-link.game-event-card span[loser] {
   color: #660000;
 }
 game-events-table route-link.game-event-card img {
@@ -266,6 +259,13 @@ game-events-table .game-events-table-legend {
   grid-column-gap: 10px;
 }
 
+players-table route-link.card,
+players-table #legend {
+  display: grid;
+  grid-template-columns: 30px 70px 155px 40px 60px 45px 100px 80px;
+  grid-template-areas: "ref" "player-picture player-name countries" "elo dan-kyu last-game-date";
+  grid-column-gap: 10px;
+}
 players-table span:not(.align-left) {
   display: flex;
   justify-content: center;
@@ -305,7 +305,29 @@ players-table .pagination button:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-players-table route-link.player-card {
+players-table .loader-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 20px 0;
+}
+players-table .loader-container .loader {
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid green;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+players-table route-link.card {
   margin-bottom: 35px;
   width: max-content;
   background: whitesmoke;
@@ -318,34 +340,23 @@ players-table route-link.player-card {
   padding-right: 12px;
   margin-bottom: 10px;
   align-items: center;
-  display: grid;
-  grid-template-columns: 30px 70px 175px 40px 60px 45px 100px 80px;
-  grid-template-areas: "ref player-picture player-name countries elo dan-kyu last-game-date";
-  grid-column-gap: 10px;
 }
-players-table route-link.player-card:hover {
+players-table route-link.card:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-players-table route-link.player-card route-link {
-  color: #000066;
-}
-players-table route-link.player-card route-link[winner] {
+players-table route-link.card span[winner] {
   color: #005200;
 }
-players-table route-link.player-card route-link[loser] {
+players-table route-link.card span[loser] {
   color: #660000;
 }
-players-table route-link.player-card img {
+players-table route-link.card img {
   max-width: 70px;
   max-height: 70px;
   border-radius: 10px;
 }
-players-table #players-table-legend {
-  display: grid;
-  grid-template-columns: 30px 70px 175px 40px 60px 45px 100px 80px;
-  grid-template-areas: "ref player-picture player-name countries elo dan-kyu last-game-date";
-  grid-column-gap: 10px;
+players-table #legend {
   padding: 12px 8px;
   padding-right: 12px;
   align-items: center;
@@ -484,13 +495,10 @@ player-view #player-personal-card #player-personal-card-content:hover {
   box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
   transform: translate3d(0px, -0.5px, 0px);
 }
-player-view #player-personal-card #player-personal-card-content route-link {
-  color: #000066;
-}
-player-view #player-personal-card #player-personal-card-content route-link[winner] {
+player-view #player-personal-card #player-personal-card-content span[winner] {
   color: #005200;
 }
-player-view #player-personal-card #player-personal-card-content route-link[loser] {
+player-view #player-personal-card #player-personal-card-content span[loser] {
   color: #660000;
 }
 player-view #player-personal-card #player-personal-card-content img {
